fix some layout issues

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,10 +35,12 @@ body {
   color: #66595C;
   font-weight: 300;
   font-size: 16px;
+  margin: 0;
 }
 
 .back {
   background-color: $codegreen !important;
+  float: left;
 }
 
 //Carousel styles
@@ -173,7 +175,7 @@ z-index: 2;
 .menu-card {
   background-color: #1A237E;
   padding: 0;
-  min-width: 400px;
+  min-width: 350px;
 }
 
 .menu-btn {
@@ -216,11 +218,12 @@ z-index: 2;
   padding: 0;
   button {
     font-size: 1.1em;
-    padding: 2em 3em;
+    padding: 2em 1em 2em 4em;
   }
   // height: 80px;
   .md-list-item-inner {
-    padding: 0 36px;
+    padding: 0;
+    width: 100%;
     font-family: $secondary;
     text-transform: uppercase;
   }
@@ -256,22 +259,30 @@ z-index: 2;
 #skills {
   align-items: flex-start;
 }
-
+[data-useragent*='Mozilla/5.0']:not([data-useragent*='Chrome'], [data-useragent*='Safari']) {
+  .header-headline {
+    padding-top: 30%;
+  }
+}
 
 header {
   height: 600px;
   background-color: $indigo;
   position: relative;
   box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
+  // padding-top: 16vh;
+
   .header-headline {
     text-align: center;
     margin: 0 auto;
     padding-top: 18vh;
-    @media screen and (min-width: 960px) and (max-width: 1400px) {
+    padding-top: 16%;
+
+    @media (min-width: 960px) and (max-width: 1400px) {
       padding-top: 16%;
       width: 90%;
     }
-    @media screen and (min-width: 1400px) and (max-width: 1800px) {
+    @media (min-width: 1400px) and (max-width: 1800px) {
       padding-top: 16%;
       width: 90%;
     }
@@ -323,18 +334,19 @@ header {
   height: 100%;
 }
 
-
+.portal-wrapper {
+    padding-top: .5em;
+}
 .portal-card {
-  background-color: #B39DDB;
   min-height: 300px;
   &__header {
     font-family: $body;
     font-weight: 400;
-    font-size: 1.5em;
+    font-size: 1.2em;
+    font-weight: 500;
     padding: 0 32px;
     margin: 0;
-    background-color: #B39DDB;;
-    color: white;
+    color: #212121;
     &--contact {
       padding: 32px;
     }
@@ -344,11 +356,10 @@ header {
   }
   &__description {
     padding: 0 32px;
-    background-color: #B39DDB;
     p {
       font-size: 1em;
       font-weight: 400;
-      color: white;
+      color: #212121;
     }
     &--contact {
       p {
@@ -363,31 +374,28 @@ header {
   font-family: $body;
   font-weight: 400;
   font-size: 1.8em;
-  padding: 7%;
-  padding-bottom: 2%;
   margin: 0;
-  background-color: #B39DDB;;
-  color: white;
+  color: #212121;
 }
 
 .bio-card {
   margin: 0;
 }
 .bio-block {
-  padding: 7%;
   padding-top: 0;
-  background-color: #B39DDB;
-  p {
+    p {
     font-size: 1em;
     font-weight: 400;
-    color: white;
+    color: #212121;
   }
 }
 .chris-pic {
-  width: 450px;
-  height: 350px;
+  width: 550px;
+  height: 430px;
   text-align: center;
   margin: 0 1em;
+  padding: 1em;
+  padding-top: 0;
   @media (min-width: 1400px) {
     width: 580px;
     height: 430px;
